# seecad

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docker/: openscad.Dockerfile
docs/: ARCHITECTURE.md  ASSEMBLY-LINT.md  ASSEMBLY-SAFETY.md  GCODE.md  IMPORTING-ASSEMBLIES.md  MESH-LINT.md  NOPSCADLIB.md  PROOF-SHEETS.md  SECURITY.md  SEMANTIC-INDEX.md  SOURCE-OBSERVATION.md
docs/sprints/: SPRINT-0001.md
examples/6dof_robot_arm/: README.md  assembly.json
examples/blocked_alternative_approaches/: README.md  assembly.json
examples/blocked_top_cover_fastener/: README.md  assembly.json
examples/mesh_lint/: fdm-profile.json
examples/mixed_service_panel_access/: README.md  assembly.json
examples/precision_enclosure/: README.md  intent.json  precision_enclosure.scad
examples/simple_library_assembly/: README.md  intent.json  simple_library_assembly.scad
scripts/: compose_smoke.py
src/seecad/: __init__.py  __main__.py  analysis.py  api.py  assembly_lint.py  cli.py  config.py  engine.py  errors.py  (+11 more)
tests/: conftest.py  test_api.py  test_assembly_lint.py  test_cli.py  test_config.py  test_engine.py  test_mesh_lint.py  test_models.py  test_planner.py  test_proof_sheets.py  test_remote_engine.py  test_scad.py  test_service.py  test_source_observe.py  test_store.py  test_web_proxy.py  test_worker.py
web/: Dockerfile  import.html  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
(+24 files in other folders)
