[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "seecad"
version = "0.1.0"
description = "Semantic, AI-assisted CAD orchestration for deterministic OpenSCAD models"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "mcp>=1.9,<2",
  "numpy>=2.0,<3",
  "openai>=1.93,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "trimesh>=4.6,<5",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
seecad = "seecad.cli:app"
seecad-api = "seecad.api:run"
seecad-mcp = "seecad.mcp_server:run"
seecad-worker = "seecad.worker:run"
seecad-worker-health = "seecad.worker:healthcheck"

[tool.hatch.build.targets.wheel]
packages = ["src/seecad"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = ["integration: requires the bounded OpenSCAD worker image"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", ".venv", ".seecad", "node_modules", "vendor", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
